--- a/bliud/css/index.css
+++ b/bliud/css/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: green; }
+  margin: 0; }
 
 form {
   width: 30%;
@@ -8,7 +8,11 @@ form {
   margin-top: 50px;
   text-align: center; }
 
-h1 {
+.hero {
+  width: 100%;
+  height: 400px; }
+
+h1, p {
   color: #fff;
   font-size: 30px;
   text-align: center; }
