--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,5 @@
 body{
-    background-color:green;
+    margin: 0;
 }
 form{
     width:30%;
@@ -9,7 +9,11 @@ form{
     text-align:center;
     
 }
-h1{
+.hero{
+width: 100%;
+height: 400px;
+}
+h1,p{
     color:#fff;
     font-size:30px;
     text-align:center;
