--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,13 +9,13 @@ form{
     text-align:center;
     
 }
-.hero{
-width: 100%;
-height: 400px;
+.pic{
+    margin:auto;
+    width:50%;
 }
 h1,p{
-    color:#fff;
-    font-size:30px;
+    color:black;
+    font-size:50px;
     text-align:center;
 }
 a{
